@@ -153,7 +153,7 @@ FFVC_FC = mpif90
 FFVC_FC_LD = 
 FFVC_LDFLAGS = 
 FFVC_LIBS =  -lifport -lifcore
-FFVC_REVISION = 20130831_2130
+FFVC_REVISION = 20130903_1530
 FREALOPT = 
 GREP = /usr/bin/grep
 INSTALL = /usr/local/bin/ginstall -c
@@ -177,10 +177,10 @@ OBJEXT = o
 PACKAGE = FFVC
 PACKAGE_BUGREPORT = keno@riken.jp
 PACKAGE_NAME = FFVC
-PACKAGE_STRING = FFVC 1.3.5
+PACKAGE_STRING = FFVC 1.3.6
 PACKAGE_TARNAME = FFVC
 PACKAGE_URL = 
-PACKAGE_VERSION = 1.3.5
+PACKAGE_VERSION = 1.3.6
 PATH_SEPARATOR = :
 PL_CFLAGS = -I/usr/local/Polylib/include
 PL_DIR = /usr/local/Polylib
@@ -197,7 +197,7 @@ TGT_DEVICE = Mountain_Lion
 TP_CFLAGS = -I/usr/local/TextParser/include
 TP_DIR = /usr/local/TextParser
 TP_LDFLAGS = -L/usr/local/TextParser/lib -lMPITP
-VERSION = 1.3.5
+VERSION = 1.3.6
 abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.3.5/doc
 abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.3.5/doc
 abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.3.5
