@@ -59,7 +59,7 @@ while test $# -gt 0; do
     --version)
 cat <<EOF
 
-# FFV-C : Frontflow / violet Cartesian  Ver. 1.3.5  (20130831_2130)
+# FFV-C : Frontflow / violet Cartesian  Ver. 1.3.6  (20130903_1530)
 #
 # Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 # All rights reserved.
