@@ -53,6 +53,76 @@ void VoxInfo::adjMediumPrdc_Inner(int* mid, CompoList* cmp)
 }
 
 
+// #################################################################
+// コンポーネントのbid情報から近似的な面積と法線を計算する
+void VoxInfo::calCompoArea(const float dhd, const int* bid, CompoList* cmp, FILE* fp)
+{
+  Hostonly_
+  {
+    printf("\n---------------------------------------------------------------------------\n\n");
+    printf("\t>> Comparison of Component normal and area\n\n");
+    printf("\t  No.  Normal                 Original  /                      Approximated  : Area [m*m] Org./  Approx.     Err.[%%]\n");
+    
+    fprintf(fp, "\n---------------------------------------------------------------------------\n\n");
+    fprintf(fp, "\t>> Comparison of Component normal and area\n\n");
+  }
+  
+  int st[3], ed[3]; // コンポーネントのBbox
+  int ss[3];        // 各軸方向の面積
+  float nv[3];      // 近似計算した法線
+
+  for (int n=1; n<=NoCompo; n++)
+  {
+    // 媒質のときにはスキップ
+    if ( cmp[n].isKindMedium() ) continue;
+    
+    float vec[3] = { (float)cmp[n].nv[0], (float)cmp[n].nv[1], (float)cmp[n].nv[2] };
+    
+    // コンポーネントのBbox情報
+    cmp[n].getBbox(st, ed);
+    
+    
+    // 各方向の張るスクリーンに要素を投影し，面積を求める
+    projectCompo(st, ed, n, bid, ss);
+    
+    
+    // 無次元面積
+    float aa = sqrt( ss[0]*ss[0] + ss[1]*ss[1] + ss[2]*ss[2] );
+    
+    if ( aa != 0.0 )
+    {
+      nv[0] = (float)ss[0] / aa;
+      nv[1] = (float)ss[1] / aa;
+      nv[2] = (float)ss[2] / aa;
+    }
+    else
+    {
+      nv[0] = nv[1] = nv[2] = 0.0;
+    }
+    
+    float ap = aa * dhd * dhd; // dhd は有次元値，近似的な面積
+    float ao = (float)cmp[n].area;
+    
+    Hostonly_
+    {
+      printf("\t %3d (%10.3e %10.3e %10.3e) / (%10.3e %10.3e %10.3e) :  %12.5e  / %12.5e  %6.2f\n",
+             n, vec[0], vec[1], vec[2], nv[0], nv[1], nv[2], ao, ap, fabs(ap-ao)/ao*100.0);
+      fprintf(fp,"\t %3d (%10.3e %10.3e %10.3e) / (%10.3e %10.3e %10.3e) :  %12.5e  / %12.5e  %6.2f\n",
+              n, vec[0], vec[1], vec[2], nv[0], nv[1], nv[2], ao, ap, fabs(ap-ao)/ao*100.0);
+    }
+    
+    cmp[n].area = (REAL_TYPE)ap;
+    
+    // 法線はオリジナルを使う
+    //cmp[n].nv[0]= (REAL_TYPE)nv[0];
+    //cmp[n].nv[1]= (REAL_TYPE)nv[1];
+    //cmp[n].nv[2]= (REAL_TYPE)nv[2];
+
+  }
+  
+}
+
+
 
 // #################################################################
 // dst[]にsrc[]のstate, activeビットの情報をコピーする
@@ -3651,6 +3721,119 @@ unsigned long VoxInfo::flipInactive(unsigned long& L,
   G = c;
   
   return c;
+}
+
+
+// #################################################################
+/* @brief 各方向の張るスクリーンにコンポーネント要素を投影し，面積を求める
+ * @param [in]  st     コンポーネントのbbox始点
+ * @param [in]  ed     コンポーネントのbbox終点
+ * @param [in]  target サーチ対象ID
+ * @param [in]  bid    カットID配列
+ * @param [out] ss     各軸方向の投影面積
+ */
+void VoxInfo::projectCompo(const int* st, const int* ed, const int target, const int* bid, int* ss)
+{
+  int ix = size[0];
+  int jx = size[1];
+  int kx = size[2];
+  int gd = guide;
+  int tg = target;
+  
+  int ist = st[0];
+  int jst = st[1];
+  int kst = st[2];
+  int ied = ed[0];
+  int jed = ed[1];
+  int ked = ed[2];
+  printf("%d : %d %d %d %d %d %d\n", myRank, ist,ied, jst,jed, kst,ked);
+  // 各方向のスクリーンの大きさ
+  int lx = ied - ist + 1;
+  int ly = jed - jst + 1;
+  int lz = ked - kst + 1;
+
+  // screen
+  int* sx = new int [ly*lz]; memset(sx, 0, sizeof(int)*ly*lz);
+  int* sy = new int [lx*lz]; memset(sy, 0, sizeof(int)*lx*lz);
+  int* sz = new int [lx*ly]; memset(sz, 0, sizeof(int)*lx*ly);
+  
+  // projection
+  // 各方向のスクリーンに対して，列にひとつでもコンポがあればフラグをたてる（重複はカウントしない）
+#pragma omp parallel for firstprivate(ix, jx, kx, gd, tg) \
+firstprivate(ist, jst, kst, ied, jed ,ked, lx, ly, lz) \
+schedule(static)
+  for (int k=kst; k<=ked; k++) {
+    for (int j=jst; j<=jed; j++) {
+      for (int i=ist; i<=ied; i++) {
+        
+        size_t m  = _F_IDX_S3D(i, j, k, ix, jx, kx, gd);
+        int d = bid[m];
+        
+        // 6面のいずれかにカット
+        if ( TEST_BC(d) )
+        {
+          int b0 = getFaceBID(0, d);
+          int b1 = getFaceBID(1, d);
+          int b2 = getFaceBID(2, d);
+          int b3 = getFaceBID(3, d);
+          int b4 = getFaceBID(4, d);
+          int b5 = getFaceBID(5, d);
+          
+          // スクリーン座標
+          int ii = i - ist;
+          int jj = j - jst;
+          int kk = k - kst;
+
+          // X-dir
+          if ( (b0 == tg) || (b1 == tg) ) sx[ kk * ly + jj ] = 1;
+          
+          // Y-dir
+          if ( (b2 == tg) || (b3 == tg) ) sy[ kk * lx + ii ] = 1;
+          
+          // Z-dir
+          if ( (b4 == tg) || (b5 == tg) ) sz[ jj * lx + ii ] = 1;
+        }
+      }
+    }
+  }
+  
+  // count 小サイズのループでリダクションだけなのでスレッド化しない
+  int ax = 0;
+  int ay = 0;
+  int az = 0;
+  
+  for (int k=0; k<lz; k++) {
+    for (int j=0; j<ly; j++) {
+      ax += sx[ k * ly + j ];
+    }
+  }
+  
+  for (int k=0; k<lz; k++) {
+    for (int i=0; i<lx; i++) {
+      ay += sy[ k * lx + i ];
+    }
+  }
+  
+  for (int j=0; j<ly; j++) {
+    for (int i=0; i<lx; i++) {
+      az += sz[ j * lx + i ];
+    }
+  }
+  
+  ss[0] = ax;
+  ss[1] = ay;
+  ss[2] = az;
+  
+  if ( numProc > 1 )
+  {
+    int tmp[3] = {ax, ay, az};
+    if ( paraMngr->Allreduce(tmp, ss, 3, MPI_SUM) != CPM_SUCCESS ) Exit(0);
+  }
+  
+  if ( sx ) { delete [] sx; sx=NULL; }
+  if ( sy ) { delete [] sy; sy=NULL; }
+  if ( sz ) { delete [] sz; sz=NULL; }
+  
 }
 
 
