@@ -19,6 +19,14 @@ REVISION HISTORY
 ================
 
 --------------------------
+2013-09-03
+
+- r1021 approximate component area [ver 1.3.6]
+  - setGlobalCompoIdx_displayInfo()でグローバルなbboxから近似的な法線と面積を求める
+  - calCompoArea(), projectCompo()追加
+  - サブドメイン毎に配分されたポリゴンを出力するオプションを追加 C.Hide.GeomParaOutput
+  
+--------------------------
 2013-09-02 
 
 - r1020 change from isCDS() to isBinary()
